--- a/Lokalise/style/style.css
+++ b/Lokalise/style/style.css
@@ -16,8 +16,7 @@ html {
 
 body {
     font-size: 1rem;
-    line-height: 1;
-    font-family: 'Roboto', sans-serif;
+    line-height: 1;    
 }
 
 ol,
@@ -26,3 +25,59 @@ ul {
 }
 
 /* MAIN */
+
+.header {
+    display: flex;
+    align-items: center;    
+    padding: 25px 51px;
+    justify-content: space-between;
+    flex-wrap: wrap;   
+    border-bottom: 1px solid #CCCCCC; 
+}
+
+.logo {
+    width: 10%;
+    margin-right: 51px;
+}
+
+.logo__picture {
+    width: 100%;
+}
+
+.menu {
+    display: flex;    
+}
+
+.menu__item {
+    margin-right: 57px;
+}
+
+.header__btn-wrap {
+    width: 40%;
+}
+
+.header__btn-wrap {
+    text-align: end;    
+}
+
+.header__btn-transperent {
+    display: inline-block;
+    margin-right: 10px;
+    padding: 13px 36px;
+    border: 1px solid rgba(0, 0, 0, .5);
+}
+
+.header__btn-wrap>.header__btn {
+    display: inline-block;
+    padding: 13px 22px;
+    background-color: #FF6336;
+    border: 1px solid  #FF6336;   
+    color: white;
+}
+
+.menu__link,
+.btn {
+    text-decoration: none;
+    color: black;
+}
+
