--- a/Lokalise/style/style.css
+++ b/Lokalise/style/style.css
@@ -184,17 +184,17 @@ ul {
 }
 
 .contens>.container {
-    padding-top:  250px;
+    padding-top: 250px;
 }
 
 .contens>.container:first-child {
-    padding-top:  0px; 
+    padding-top: 0px;
 }
 
 .contents__article {
     display: flex;
     outline: 2px solid green;
-  
+
 }
 
 .contents__article:first-child {
@@ -233,5 +233,71 @@ ul {
 .contents__link {
     font-weight: 600;
     font-size: 20px;
-    line-height: 30px; 
+    line-height: 30px;
 }
+
+/* options */
+
+.options {
+    background-color: #FFF8E4;
+}
+
+.options>.container {
+    padding: 120px 0 147px 0;
+
+}
+
+.options__title {
+    font-weight: 600;
+    font-size: 50px;
+    line-height: 60px;    
+    text-align: center;
+
+}
+
+.options__items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.option__item {
+    width: 26.5%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 76px;
+    
+
+}
+
+.option__item:nth-child(3n+2) {
+    margin: 76px 135px 0 120px;
+}
+
+.option__picture-wrap {
+    width: 37.24724254%;
+    /* 160/ 429.562 =37,24724254 */
+    /* width: 160px; */
+    text-align: center;
+    margin: 0 auto 20px;
+
+}
+
+.option__picture {
+    width: 100%;    
+}
+
+.options__titles {
+    margin-bottom: 23px;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 35px;
+}
+
+.option__text {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+}
+
