changed index.html - added integrate box with divs, p, img. Changed style .css - adde styles for integrate box

--- a/Lokalise/style/style.css
+++ b/Lokalise/style/style.css
@@ -419,7 +419,7 @@ ul {
     font-size: 35px;
     line-height: 50px;
     width: 481px;
-   
+
     outline: 2px solid white;
 }
 
@@ -445,5 +445,59 @@ ul {
 }
 
 .rewards__picture {
-    width: 100%;    
+    width: 100%;
+}
+
+/* integrate */
+
+.integrate {
+    background: #E5E5E5;
+}
+
+.integrate>.container {
+    padding:169px 0 162px 0;
+}
+
+.integrate__wrap {
+   
+    text-align: center;
+}
+
+.integrate__title {
+    font-weight: 600;
+    font-size: 65px;
+    line-height: 75px;
+    width: 791px;
+    margin: 0 auto;
+}
+
+.integrate__text {
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 30px;
+    width: 539px;
+    margin: 0 auto 25px;   
+}
+
+.integrate__picture-wrap {
+    width: 1023px;   
+    margin: 0 auto 32px;
+}
+
+
+.integrate__picture {
+    width: 100%;
+}
+
+.integrate__btn {
+    text-align: center;
+    display: inline-block;
+    /* padding: 13px 22px; */
+    padding: 0 20px;
+    background-color: #FF6336;
+    border: 1px solid #FF6336;
+    color: white;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 45px;
 }
